убрал лишние поля
